Add controller and mapper for promise times and reservations
